--- a/index.html
+++ b/index.html
@@ -1,70 +1,139 @@
-<h2>Form in react Training</h2>
-<iframe src="https://player.vimeo.com/video/648590902" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h1>Advanced Training</h1>
+<h3>Buidling dashboard</h3>
+<h4>Course content</h4>
+<h5>1. Introduction 1min</h5>
+<iframe src="https://player.vimeo.com/video/651042275" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648584123" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>2. Development Tools 6min</h5>
+<iframe src="https://player.vimeo.com/video/651042566" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648574991" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648574606" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+    3. npx create-react-app coronatracker
+    4min
+</h5>
+<iframe src="https://player.vimeo.com/video/651043536" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648584371" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648590954" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+4. Walkthrough Project Directory
+4min
+</h5>
 
-<iframe src="https://player.vimeo.com/video/648575336" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/651044103" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648591155" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648576537" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648585831" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+5. First Component
+2min
+</h5>
 
-<iframe src="https://player.vimeo.com/video/648577835" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/651044770" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648591282" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648588622" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+6. Installation of Material UI components and Bootstrap 4
+3min
+</h5>
 
-<iframe src="https://player.vimeo.com/video/648579745" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/651045080" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648591406" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648590394" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+7. Refactoring App.js to Class Components
+1min
+</h5>
 
-<iframe src="https://player.vimeo.com/video/648581102" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/651045575" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648591516" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648590526" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+8. Implement Bootstrap 4 Components
+9min
+</h5>
 
-<iframe src="https://player.vimeo.com/video/648591844" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/651045722" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648590647" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648582329" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+9. CoronaTracker Dashboard Idea
+1min (no video)
+</h5>
 
-<iframe src="https://player.vimeo.com/video/648592221" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648590787" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+10. Construct the Base Structure
+23min
+</h5>
+<iframe src="https://player.vimeo.com/video/651047171" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+11. Using Apex Charts (Pie Chart)
+39min
+</h5>
+<iframe src="https://player.vimeo.com/video/651050859" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>12. Using Apex Charts (Area Chart)
+41min
+</h5>
+<iframe src="https://player.vimeo.com/video/651056965" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+13. Using Apex Charts (Bar / Line Chart)
+47min
+</h5>
+<iframe src="https://player.vimeo.com/video/651062372" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+14. Child Component: Card Component
+15min
+</h5>
+<iframe src="https://player.vimeo.com/video/651071569" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+15. Restructure Components files
+5min
+</h5>
+<iframe src="https://player.vimeo.com/video/651074792" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+16. Navigation with React-router
+6min
+</h5>
+<iframe src="https://player.vimeo.com/video/651075583" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+17. Using Axios to fetch HTTP Requests from Coronatracker.com APIs
+1hr 17min
+</h5>
 
-<iframe src="https://player.vimeo.com/video/648592452" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648592726" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<iframe src="https://player.vimeo.com/video/648592827" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+18. User Registration and Login Page
+</h5>
 
-<iframe src="https://player.vimeo.com/video/648593056" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+19. Setup Database Connection using PHP
+10min
+</h5>
 
-<iframe src="https://player.vimeo.com/video/648593179" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+20. User Registration Script + Axios request at Register Page (ReactJS)
+15min
+</h5>
 
-<iframe src="https://player.vimeo.com/video/648593283" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+21. User Authentication Script + Axios request at Register Page (ReactJS)
+13min
+</h5>
 
-<iframe src="https://player.vimeo.com/video/648593341" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+22. Build your ReactJS web app for production!
+2min
+</h5>
 
-<iframe src="https://player.vimeo.com/video/648593560" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h5>
+23. Deploying ReactJS to Google Cloud Platform
+20min
+</h5>
 
-<iframe src="https://player.vimeo.com/video/648593572" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
+<h3>Formik</h3>
 <iframe src="https://player.vimeo.com/video/648661542" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
 <iframe src="https://player.vimeo.com/video/648661715" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
