--- a/revents/public/index.html
+++ b/revents/public/index.html
@@ -22,6 +22,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHWFdemDp61mySikz9X1WdwdY8Ywa2aEY&libraries=places"></script>
+
   <title>Re-vents</title>
 </head>
 
